Impl of Red Classes, added unit and integrational tests for them, fixed problems with other classes